Fixed vertical scrollbar missing in workspace managment page

--- a/wicket/src/main/webapp/css/lamus2.css
+++ b/wicket/src/main/webapp/css/lamus2.css
@@ -117,6 +117,12 @@ header > ul#header_info_container > li > a:hover {
     height: 70%;
 }
 
+/* Workspace management page */
+
+#mainPageChild > form {
+	height: 135%;
+	overflow: scroll;
+}
 
 /* Feedback panel */
 
